@@ -57,6 +57,8 @@ xcache.mmap_path =    "/dev/zero"
 ; leave it blank(disabled) or "/tmp/phpcore/"
 ; make sure it's writable by php (open_basedir is not checked)
 xcache.coredump_directory =   ""
+; disable cache after crash until restart. (non-Win32 only)
+xcache.disable_on_crash =    Off
 
 ; enable experimental documented features for each release if available
 xcache.experimental =        Off
